--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -1,11 +1,11 @@
 # Visit https://github.com/lowlighter/metrics/blob/master/action.yml for full reference
-name: Metrics
+name: README
 on:
   # Schedule updates (each hour)
-  schedule: [{cron: "0 * * * *"}]
+  schedule: [{ cron: "0 * * * *" }]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
-  push: {branches: ["master", "main"]}
+  push: { branches: ["master", "main"] }
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -13,22 +13,29 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           # Your GitHub token
-          token: ${{ secrets.METRICS_TOKEN }}
+          token:
+            ${{ secrets.METRICS_TOKEN }}
+            # GITHUB_TOKEN is a special auto-generated token restricted to current repository, which is used to push files in it
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
 
           # Options
           user: linuxuserin
           template: classic
-          base: header, activity, community, repositories, metadata
+          base: header, activity, community, repositories
           config_timezone: Asia/Kolkata
+          config_animated: yes
+          # Extra
           plugin_achievements: yes
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
           plugin_introduction: yes
           plugin_introduction_title: yes
+          # Good to use
+          plugin_activity: yes
+          plugin_activity_days: 30
+          plugin_activity_filter: all
+          plugin_activity_limit: 10
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
           plugin_languages: yes
           plugin_languages_colors: github
-          plugin_languages_limit: 8
           plugin_languages_threshold: 0%
-          plugin_lines: yes
